添加网站更新和网络测试路由，并更新首页底部信息
- 在 routes.py 中新增 /update 和 /ping 路由
- 在 index.html 底部添加技术支持信息，包括 AWS、Cloudflare 和 frp
- 保持现有路由和模板渲染功能

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -326,6 +326,8 @@
                     <a href="/github">网站源码</a>
                     <span class="divider">|</span>
                     <a href="/update">网站更新</a>
+                    <span class="divider">|</span>
+                    <p>powered by <a href="https://aws.amazon.com" target="_blank">AWS</a> <a href="https://www.cloudflare.com" target="_blank">Cloudflare</a> <a href="https://github.com/fatedier/frp" target="_blank">frp</a></p>
                 </div>
             </footer>
         </div>
