在首页底部添加 Python 技术支持链接
- 在 index.html 的底部 powered by 部分新增 Python 官网链接
- 保持原有的 AWS、Cloudflare 和 frp 链接不变

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -326,7 +326,7 @@
                     <span class="divider">|</span>
                     <a href="/update">网站更新</a>
                     <span class="divider">|</span>
-                    <p>powered by <a href="https://aws.amazon.com" target="_blank">AWS</a> <a href="https://www.cloudflare.com" target="_blank">Cloudflare</a> <a href="https://github.com/fatedier/frp" target="_blank">frp</a></p>
+                    <p>powered by <a href="https://aws.amazon.com" target="_blank">AWS</a> <a href="https://www.cloudflare.com" target="_blank">Cloudflare</a> <a href="https://github.com/fatedier/frp" target="_blank">frp</a> <a href="https://www.python.org" target="_blank">Python</a></p>
                 </div>
             </footer>
         </div>
